Finished webpack workflow

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <title>TypeScript</title>
+    <script src="bundle.js"></script>
 </head>
 <body>
 Hello
